tests/ui/pin_project/packed_sneaky-2.stderr
error: #[pin_project] attribute may not be used on #[repr(packed)] types
  --> $DIR/packed_sneaky-2.rs:6:1
   |
6  | / hidden_repr_macro! { //~ ERROR may not be used on #[repr(packed)] types
7  | |     #[pin_project]
8  | |     struct B {
9  | |         #[pin]
10 | |         field: u32,
11 | |     }
12 | | }
   | | ^ in this macro invocation
   | |_|
   |
